--- a/Karen-Est-EspinesAleatorios-50-50.ipynb
+++ b/Karen-Est-EspinesAleatorios-50-50.ipynb
@@ -42,20 +42,20 @@
     "Steps = [9999] * t # Matriz que guardará los pasos\n",
     "\n",
     "\n",
-    "kb = 1 # Constante de \n",
-    "J = 1 # Constante de\n",
+    "kb = 1 # Constante de Boltzmann \n",
+    "J = 1 # Constante de interacción \n",
     "Tc = (2*J)/(kb*math.asinh(1))\n",
-    "#T = 0.5*Tc\n",
-    "N_tem = 30\n",
-    "Tf=[0] * N_tem\n",
+   
+    "N_tem = 30\n", # número de temperatura \n",
+    "Tf=[0] * N_tem\n", # arreglo de temperatura \n",
     "Rang_Tem = 1\n",
     "\n",
-    "minInc = 0.01  # Lo usaré para ver el Plateau\n",
-    "Punto_estable = 9999\n",
+    
+    "Punto_estable = 9999\n", # para que no se llegue a llenar con un cero\n",
     "\n",
     "\n",
-    "E_prom = 0.0\n",
-    "M_prom = 0.0"
+    "E_prom = 0.0\n", # arreglo de energías \n",
+    "M_prom = 0.0" # arreglo de magnetizaciones \n",
    ]
   },
   {
