--- a/Karen-Est-EspinesAleatorios-50-50.ipynb
+++ b/Karen-Est-EspinesAleatorios-50-50.ipynb
@@ -19,13 +19,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e331a70c",
+   "cell_type": "markdown",
+   "id": "b81d7d67",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Variables"
+    "# Variables"
    ]
   },
   {
@@ -42,30 +40,28 @@
     "Steps = [9999] * t # Matriz que guardará los pasos\n",
     "\n",
     "\n",
-    "kb = 1 # Constante de Boltzmann \n",
-    "J = 1 # Constante de interacción \n",
+    "kb = 1 # Constante de \n",
+    "J = 1 # Constante de\n",
     "Tc = (2*J)/(kb*math.asinh(1))\n",
-   
-    "N_tem = 30\n", # número de temperatura \n",
-    "Tf=[0] * N_tem\n", # arreglo de temperatura \n",
+    "#T = 0.5*Tc\n",
+    "N_tem = 30\n",
+    "Tf=[0] * N_tem\n",
     "Rang_Tem = 1\n",
     "\n",
-    
-    "Punto_estable = 9999\n", # para que no se llegue a llenar con un cero\n",
+    "minInc = 0.01  # Lo usaré para ver el Plateau\n",
+    "Punto_estable = 9999 #En caso que quede un cero en la matriz\n",
     "\n",
     "\n",
-    "E_prom = 0.0\n", # arreglo de energías \n",
-    "M_prom = 0.0" # arreglo de magnetizaciones \n",
+    "E_prom = 0.0\n",
+    "M_prom = 0.0"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "d0d1aac0",
+   "cell_type": "markdown",
+   "id": "8acd1044",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#variacion de Temperatura"
+    "# Variacion de Temperatura"
    ]
   },
   {
@@ -108,13 +104,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "5e70a360",
+   "cell_type": "markdown",
+   "id": "5152cdb6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Ilustración de la Red inicial"
+    "# ilustración de la Red inicial"
    ]
   },
   {
@@ -151,7 +145,7 @@
    "id": "95dd0bc4",
    "metadata": {},
    "source": [
-    "## Algoritmo metropolis, Energía, magnetizació de la red y promedio."
+    "## Algoritmo metropolis (Energía, magnetización y promedios)"
    ]
   },
   {
@@ -262,11 +256,7 @@
     "            Mtotal += RedX[i][j]\n",
     "            \n",
     "    #print(Mtotal)\n",
-    "    return Mtotal\n",
-    "\n",
-    "#lista2 = metropolis(T,A)\n",
-    "#lista2 = metropolis(5,Red_inicial)\n",
-    "print(\"Listo\")"
+    "    return Mtotal"
    ]
   },
   {
@@ -297,15 +287,13 @@
    "outputs": [],
    "source": [
     "promedios_magnetismo = [0] * N_tem\n",
+    "promedios_E = [0] * N_tem\n",
     "\n",
     "for k in range(N_tem):\n",
     "    #metropolis(Tf[k],A)\n",
     "    metropolis(Tf[k],Red_inicial)\n",
     "    promedios_magnetismo[k] = promedio(M_t)\n",
-    "    \n",
-    "\n",
-    "    #print(k,Tf[k])\n",
-    "#print(promedios_magnetismo)"
+    "    "
    ]
   },
   {
@@ -404,22 +392,6 @@
     "# Mostrar el gráfico\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b2a06ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12c56985",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
